--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,15 +33,16 @@
 
 
 
+
     <string-array name="division_list">
-        <item>Dhaka</item>
-        <item>Rajshahi</item>
-        <item>Barisal</item>
-        <item>Khulna</item>
-        <item>Sylhet</item>
-        <item>Rangpur</item>
-        <item>Chittagong</item>
-        <item>Mymensingh</item>
+        <item>Kieni west</item>
+        <item>Mathira east</item>
+        <item>Mukurwe-ini</item>
+        <item>Nyeri municipality</item>
+        <item>Kieni East</item>
+        <item>Tetu</item>
+        <item>Othaya</item>
+        <item>Mathira west</item>
 
     </string-array>
 
@@ -65,13 +66,12 @@
     <string name="female_">If you are female, you must:\n Be healthy and feeling well\nBe at least 17 years old in most states\nBe at least 5 ft 5 inch\nWeigh at least 150 lbs.</string>
     <string name="male_">If you are male, you must:\nBe healthy and feeling well\nBe at least 17 years old in most states\nBe at least 5 ft 1 inch \nWeigh at least 130 lbs.\n</string>
     <string name="info_">Giving blood saves lives. The blood you give is a lifeline in an emergency and for people who need long-term treatments. Many people would not be alive today if donors had not generously given their blood. \n\nWhy we need you to give blood?\n\n We need over 6000 blood donations every day to treat patients in need for people to give blood.\n\nEach year we need approximately 200000 new donors, as some donors can no longer give blood.Most people between ages of 17-65 are able to give blood. Around half our current donors are over 45.That is why we need more young people to start giving blood.</string>
-    <string name="aboutus">This is a demo projects on blood donation and collecting. Our Team Members are: \n
-                1. Mobarak Hosen Shakil\n
-                2. Shamim Hossain \n
-                3. Mehedi Hasan \n
-                4. Akib Hosen Khan \n
-                5. MMR Raju \n
-                6. Abdur Rahman\n
+    <string name="aboutus">This project is on blood donation and collecting. It is developed by: \n
+                1. John Mwangi Ndungu\n
+                2. mwangijohn5465@gmail.com \n
+                3. 0791444325 \n
+                4. github.com/kenRedco \n
+
     </string>
 
 
